# matplotlibcpp

./: CMakeLists.txt
example/: CMakeLists.txt
example/src/: modern.cpp
main2/: CMakeLists.txt
matplotlib/: CMakeLists.txt
